Add post read logic
